--- a/01-Fundamentos/secao-03-introducao-a-html-e-css/dia-03/style.css
+++ b/01-Fundamentos/secao-03-introducao-a-html-e-css/dia-03/style.css
@@ -1,28 +1,35 @@
-.caixa {
-    color: white;
-    display: inline-block;
-    line-height: 50px;
-    text-align: center;
-    vertical-align: top;
-  }
+.super-mario {
+  width: 200px;
+  position: absolute;
+  z-index: 1;
+}
+
+.goomba {
+  width: 100px;
+  top: 400px;
+  left: 60px;
+  position: absolute;
   
-  .width-and-height {
-    height: 50px;
-    width: 50px;
-  }
-  
-  /* insira na classe abaixo um padding de 20px para aplicá-lo aos itens B, C e D */
-  .padding {
-    padding: 20px;
-  }
-  
-  
-  /* insira na classe abaixo uma margem de 30px para aplicá-la aos itens C e D */
-  .margin {
-  margin 30px 
-  }
-  
-  /* insira na classe abaixo uma borda com valor '5px solid black' para aplicá-la ao item D */
-  .border { 
-    border: '5px solid black';
-  }
+}
+
+.baloon {
+position: absolute;
+top: 100px;
+left: 235px;
+z-index: 2;
+}
+
+.speach {
+  font-size: 25px;
+  position: absolute;
+  top: 145px;
+  left: 250px;
+  z-index: 3;
+}
+
+.bowser {
+  position: absolute;
+  width: 600px;
+  top: 200px;
+  left: 500px;
+}
