--- a/01-Fundamentos/secao-03-introducao-a-html-e-css/dia-03/style.css
+++ b/01-Fundamentos/secao-03-introducao-a-html-e-css/dia-03/style.css
@@ -1,35 +1,12 @@
-.super-mario {
-  width: 200px;
-  position: absolute;
-  z-index: 1;
+h1, p {
+  text-align: center;
 }
-
-.goomba {
-  width: 100px;
-  top: 400px;
-  left: 60px;
-  position: absolute;
-  
+li:hover {
+  color: blueviolet;
 }
-
-.baloon {
-position: absolute;
-top: 100px;
-left: 235px;
-z-index: 2;
+li:active {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
-.speach {
-  font-size: 25px;
-  position: absolute;
-  top: 145px;
-  left: 250px;
-  z-index: 3;
-}
-
-.bowser {
-  position: absolute;
-  width: 600px;
-  top: 200px;
-  left: 500px;
+li {
+  list-style: none;
 }
