--- a/01-Fundamentos/secao-03-introducao-a-html-e-css/dia-03/style.css
+++ b/01-Fundamentos/secao-03-introducao-a-html-e-css/dia-03/style.css
@@ -1,12 +1,38 @@
-h1, p {
-  text-align: center;
+div:hover {
+  border: 6px solid black;
+
 }
-li:hover {
-  color: blueviolet;
+div:nth-of-type(1) {
+  color: blue;
 }
-li:active {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+div:nth-of-type(2) {
+  color: brown;
 }
-li {
-  list-style: none;
+div:nth-of-type(3) {
+  color: chocolate;
+}
+div:nth-of-type(4) {
+  color: darkgreen;
+}
+div:nth-of-type(5) {
+  color: aqua;
+}
+div:nth-of-type(1) > h3 {
+  color: blue;
+} 
+div:nth-of-type(2) > h3 {
+  color: brown;
+}
+div:nth-of-type(3) > h3 {
+  color: black;
+  height: 100px;
+}
+div:nth-of-type(4) > h3 {
+  font-size: 20px;
+}
+div:nth-of-type(5) > h3 {
+  font-style: italic;
+}
+div:nth-of-type(odd) > h3 {
+  font-style: italic;
 }
